# nighthollow

./: .gitignore  .gitmodules  Cargo.toml  LICENSE  README  README.md  nighthollow.sln.DotSettings
.config/: dotnet-tools.json
Assets/: .editorconfig  configuration.edn
Assets/Animation/: Acolyte.overrideController  Adept.overrideController  Assassin.overrideController  Base.controller  Berserker.controller  Berserker.overrideController  Blackguard.overrideController  Defiler.overrideController  Hag.overrideController  Mage.overrideController  Ogre.overrideController  Skeleton.overrideController  SkeletonMinion.overrideController  Sorcerer.overrideController  Spectre.overrideController  Viking.overrideController  Wizard.overrideController  Zombie.overrideController
Assets/Interface/: Button.uxml  Common.uss  DefaultPanelSettings.asset  (+9 more)
ProjectSettings/: EditorBuildSettings.asset  EditorSettings.asset  GraphicsSettings.asset  PackageManagerSettings.asset  Physics2DSettings.asset  ProjectSettings.asset  ProjectVersion.txt  QualitySettings.asset  TagManager.asset
UserSettings/: EditorUserSettings.asset  monitorLayout.wlt
api/: api.proto  generate.sh
scripts/: 2021.06.laptop.wlt  data.sh  deleteData.sh  messagePack.sh  recordGenerator.py  removeAllGameData.sh  run_tests.sh  sass.sh  serve.sh
src/: api.rs  attributes.rs  card.rs  combat.rs  commands.rs  console.rs  effect.rs  effects.rs  gameplay.rs  ideas.rs  interface.rs  main.rs  model.rs  prelude.rs  primitives.rs  render.rs  requests.rs  responses.rs  rules.rs  scenarios.rs  state.rs  unit.rs  zones.rs
(+3504 files in other folders)
