[package]
name = "magewatch"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = {version = "1.0.106", features = ["derive"]}
serde_json = "1.0.51"
rustyline = "6.1.1"
termion = "1.5.5"
log = "0.4.8"
pretty_env_logger = "0.4.0"
derive_more = "0.99.5"

[dev-dependencies]
quickcheck = "0.9"
quickcheck_macros = "0.9"