[package]
name = "magewatch"
version = "0.1.0"
edition = "2018"
default-run = "magewatch"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "0.5"
dyn-clone = "1.0"
eyre = "0.4"
color-eyre = { version = "0.3", default-features = false }
lazy_static = "1.4"
log = "0.4"
pretty_env_logger = "0.4"
prost = "0.6"
prost-build = "0.6"
rand = "0.7"
rand_distr = "0.2"
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"
tokio = { version = "0.2", features = ["macros"] }
typetag = "0.1"
warp = "0.2"
warp-protobuf = "0.1"
